@@ -12,21 +12,16 @@ public class FlightSearchTest extends BaseTest {
     @Test
     @DisplayName("Verify flight search")
     void searchFlights() {
-        FlightService flightService = new FlightService();
-
-        FlightResponse response = flightService.searchFlights(
+        FlightResponse response = new FlightService().searchFlights(
                 TestData.FROM,
                 TestData.TO,
                 TestData.DATE,
                 TestData.TRAVEL_CLASS
         );
-
-        FlightResponse.Flight flight = response.getFlights().get(0);
-
-        Assertions.assertTrue(response.getCount() > 0, "At least one flight should be returned");
-        Assertions.assertEquals(TestData.FROM, flight.getOrigin());
-        Assertions.assertEquals(TestData.TO, flight.getDest());
-
-        System.out.println("Flight ID: " + flight.getId());
+        Assertions.assertFalse(response.flights().isEmpty(), "At least one flight should be returned");
+        FlightResponse.Flight flight = response.flights().getFirst();
+        Assertions.assertEquals(TestData.FROM, flight.origin());
+        Assertions.assertEquals(TestData.TO, flight.dest());
+        System.out.println("Flight ID: " + flight.id());
     }
 }
